Address Christoph's feedback